# kpm-bridge-open6g-ran

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.md  README.md  REPRODUCIBILITY.md  SCOPE_LOCK.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
data/: README.md  colosseum_subset_manifest.json
docs/: FIGURES.md  FINAL_VALIDATION_2026-07-13.md  FINAL_VALIDATION_2026-07-23.md  LITERATURE_GAP.md
manuscript/: README_COMPILE.md  main.bbl  main.tex  references.bib
reproducibility/outputs/: ablation_results.csv  benchmark_summary.json  claim_audit.csv  main_results.csv  monitor_sensitivity_results.csv  per_feature_results.csv  reference_audit.csv  selective_results.csv  semantic_results.csv  sensitivity_results.csv
scripts/: analyze_per_feature.py  audit_claims.py  audit_references.py  fetch_colosseum_subset.py  make_figures.py  make_latex_results.py  run_benchmark.py  run_smoke.py
src/kpm_bridge/: __init__.py  calibration.py  certificates.py  contracts.py  dataset.py  evaluation.py  mappers.py  profiles.py  shiftbench.py  splits.py  xapp.py
submission/: PACKAGE_README.md  SUBMISSION_CHECKLIST.md  cover_letter.tex
tests/: test_calibration.py  test_certificates.py  test_contracts.py  test_splits.py
