[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kpm-bridge"
version = "1.0.0"
description = "Uncertainty-aware cross-vendor KPM semantic alignment for portable Open RAN xApps"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "scipy>=1.12,<2",
  "scikit-learn>=1.4,<2",
  "matplotlib>=3.8,<4",
  "seaborn>=0.13,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["src"]
