[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kpm-bridge"
version = "1.0.2"
description = "Uncertainty-aware cross-implementation KPM semantic alignment for portable Open RAN xApps"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Yassir AL-Karawi", email = "yassirameen22@gmail.com"},
  {name = "Hamed Al-Raweshidy", email = "hamed.al-raweshidy@brunel.ac.uk"},
]
requires-python = ">=3.11"
keywords = [
  "6G",
  "Open RAN",
  "O-RAN",
  "xApp",
  "telemetry portability",
  "conformal prediction",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "scipy>=1.12,<2",
  "scikit-learn>=1.4,<2",
  "matplotlib>=3.8,<4",
  "seaborn>=0.13,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.urls]
Homepage = "https://github.com/YassirALKarawi/kpm-bridge-open6g-ran"
Repository = "https://github.com/YassirALKarawi/kpm-bridge-open6g-ran.git"
Issues = "https://github.com/YassirALKarawi/kpm-bridge-open6g-ran/issues"
Documentation = "https://github.com/YassirALKarawi/kpm-bridge-open6g-ran/blob/main/REPRODUCIBILITY.md"

[tool.setuptools.packages.find]
where = ["src"]
